# 6122

lab7/: CMakeLists.txt  control.h  main.cpp  simulation.cpp  simulation.h
lab7 OBJ files/: compute_chicken_scale  compute_chicken_scale.cpp
